--- a/FamousFolks/FamousFolks.csproj
+++ b/FamousFolks/FamousFolks.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -168,26 +170,71 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ExpertisesController.cs" />
+    <Compile Include="Controllers\FolksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Expertise.cs">
+      <DependentUpon>FamousFolks.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolks.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FamousFolks.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolks.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FamousFolks.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolks.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FamousFolks.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolksContext.cs" />
+    <Compile Include="Models\Folk.cs">
+      <DependentUpon>FamousFolks.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\FamousFolks.mdf" />
+    <Content Include="App_Data\FamousFolks_log.ldf">
+      <DependentUpon>FamousFolks.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\FamousFolks.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FamousFolks.edmx</DependentUpon>
+      <LastGenOutput>FamousFolks.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\FamousFolks.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FamousFolks.edmx</DependentUpon>
+      <LastGenOutput>FamousFolks.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\FamousFolks.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FamousFolks.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\FamousFolks.edmx.diagram">
+      <DependentUpon>FamousFolks.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -234,10 +281,18 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Expertises\Create.cshtml" />
+    <Content Include="Views\Expertises\Delete.cshtml" />
+    <Content Include="Views\Expertises\Details.cshtml" />
+    <Content Include="Views\Expertises\Edit.cshtml" />
+    <Content Include="Views\Expertises\Index.cshtml" />
+    <Content Include="Views\Folks\Create.cshtml" />
+    <Content Include="Views\Folks\Delete.cshtml" />
+    <Content Include="Views\Folks\Details.cshtml" />
+    <Content Include="Views\Folks\Edit.cshtml" />
+    <Content Include="Views\Folks\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -245,6 +300,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
