--- a/FamousFolks/Web.config
+++ b/FamousFolks/Web.config
@@ -11,6 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FamousFolks-20170212022338.mdf;Initial Catalog=aspnet-FamousFolks-20170212022338;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="FamousFolksEntities" connectionString="metadata=res://*/Models.FamousFolks.csdl|res://*/Models.FamousFolks.ssdl|res://*/Models.FamousFolks.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FamousFolks.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="FamousFolksContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FamousFolksContext-20170212150704; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FamousFolksContext-20170212150704.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
